--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Models for the MtG Omega Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eslint": "eslint .",
+    "check": "npm run eslint",
+    "pretest": "npm run check",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   "homepage": "https://github.com/mtg-omega/models#readme",
   "dependencies": {
     "config": "^1.24.0",
+    "hotvenue-utils": "git+https://github.com/hotvenue/utils.git",
     "sequelize": "^3.28.0"
   },
   "devDependencies": {
@@ -35,5 +39,10 @@
     "eslint-plugin-react": "^6.8.0",
     "jest": "^18.1.0",
     "sqlite3": "^3.1.8"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!hotvenue-*)"
+    ]
   }
 }
