--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/mtg-omega/models#readme",
   "dependencies": {
     "config": "^1.24.0",
+    "graphql": "^0.9.0",
+    "graphql-custom-types": "^0.7.1",
     "hotvenue-utils": "git+https://github.com/hotvenue/utils.git",
     "sequelize": "^3.28.0"
   },
