--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "mtg-omega-models",
+  "name": "mtg-omega-models-sql",
   "version": "0.0.1",
-  "description": "Models for the MtG Omega Project",
-  "main": "index.js",
+  "description": "SQL models for the MtG Omega Project",
+  "main": "lib/index.js",
   "scripts": {
     "eslint": "eslint .",
     "check": "npm run eslint",
     "pretest": "npm run check",
-    "test": "node --harmony node_modules/jest/bin/jest.js"
+    "test": "node --harmony node_modules/jest/bin/jest.js",
+    "transpile": "babel --presets es2015 src --out-dir lib",
+    "pre-publish": "npm run transpile"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mtg-omega/models.git"
+    "url": "git+https://github.com/mtg-omega/models-sql.git"
   },
   "keywords": [
     "models",
@@ -21,7 +23,7 @@
   "author": "Niccolò Olivieri <niccolo@olivieriachille.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mtg-omega/models/issues"
+    "url": "https://github.com/mtg-omega/models-sql/issues"
   },
   "homepage": "https://github.com/mtg-omega/models#readme",
   "dependencies": {
@@ -30,8 +32,10 @@
     "sequelize": "^3.28.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-jest": "^18.0.0",
     "babel-preset-airbnb": "^2.1.1",
+    "babel-preset-es2015": "^6.22.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
