--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "homepage": "https://github.com/mtg-omega/models#readme",
   "dependencies": {
     "config": "^1.24.0",
-    "hotvenue-utils": "git+https://github.com/hotvenue/utils.git",
-    "sequelize": "^3.28.0"
+    "sequelize": "^3.28.0",
+    "zweer-utils": "^0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
